REGRESSION(Containment) nullptr deref in RenderBox::styleDidChange https://bugs.webkit.org/show_bug.cgi?id=234647 <rdar://86841302>

Reviewed by Simon Fraser.

Source/WebCore:

Do not try to propagate the writing mode to the RenderView unless we are attached to one.

Test: fast/dynamic/document-elment-renderer-null-crash.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange):

LayoutTests:

* fast/dynamic/document-elment-renderer-null-crash-expected.txt: Added.
* fast/dynamic/document-elment-renderer-null-crash.html: Added.



Canonical link: https://commits.webkit.org/245552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287417 268f45cc-cd09-0410-ab3c-d52691b4dbfc